fixed: title overflow, login box tips

--- a/src/components/Home/index.module.less
+++ b/src/components/Home/index.module.less
@@ -18,6 +18,9 @@
 
     h1 {
         margin-bottom: 12px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
     p {
         margin-bottom: 8px;
